syntax = "proto3";
package product;
message Product{
int32 id=1;
string title=2;
string description=3;
double price=4;
}



message GetProductRequest{
    int32 id=1;
}

message GetProductResponse{
    Product product=1;
}
message CheckInCartRequest{
    int32 user_id=1;
    int32 product_id=2;
}

message CheckInCartResponse{
    bool check=1;
}
message GetAllProductRequest{
    string query=1;
}

message GetAllProductResponse{
   repeated Product product=1;
}

message SearchProductRequest{
    int32 id=1;
}
message SearchProductResponse{
    repeated Product product=1;
}

message DeleteProductRequest{
    int32 id=1;
}
message DeleteProductResponse{
    string res=1;
}
message UpdateProductRequest{
    Product product=1;
}
message UpdateProductResponse{
    Product product=1;
}

message CreateProductRequest{
string title=1;
string description=2;
double price=3;
}

message CreateProductResponse{
    Product product=1;
}


service ProductService{
rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
rpc GetProduct(GetProductRequest) returns (GetProductResponse);
rpc GetAllPorducts(GetAllProductRequest) returns (GetAllProductResponse);
rpc SearchProduct(SearchProductRequest) returns (SearchProductResponse);
rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
rpc CheckInCart(CheckInCartRequest) returns (CheckInCartResponse);
}